<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_name_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbarSize="25dp"
                android:textColorHint="@color/additional_main"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/additional_main"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:hintTextColor="@color/additional_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/item_edittext_style"
                    android:fontFamily="@font/oranienbaum"
                    android:gravity="center_vertical"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:paddingStart="12dp"
                    android:textColor="@color/additional_main"
                    android:textColorHighlight="@color/background_main"
                    android:textColorHint="@color/additional_main"
                    android:textColorLink="@color/background_main"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_surname_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbarSize="25dp"
                android:textColorHint="@color/additional_main"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/additional_main"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:hintTextColor="@color/additional_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_surname_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/item_edittext_style"
                    android:fontFamily="@font/oranienbaum"
                    android:gravity="center_vertical"
                    android:hint="@string/your_surname"
                    android:inputType="textPersonName"
                    android:paddingStart="12dp"
                    android:textColor="@color/additional_main"
                    android:textColorHighlight="@color/background_main"
                    android:textColorHint="@color/additional_main"
                    android:textColorLink="@color/background_main"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_number_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbarSize="25dp"
                android:textColorHint="@color/additional_main"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/additional_main"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:hintTextColor="@color/additional_main">

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/reg_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/item_edittext_style"
                    android:fontFamily="@font/oranienbaum"
                    android:gravity="center_vertical"
                    android:hint="@string/your_number"
                    android:inputType="phone"
                    android:paddingStart="12dp"
                    android:textColor="@color/additional_main"
                    android:textColorHighlight="@color/background_main"
                    android:textColorHint="@color/additional_main"
                    android:textColorLink="@color/background_main"
                    android:textSize="20sp"
                    app:mask="+#(###) ###-##-##"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbarSize="25dp"
                android:textColorHint="@color/additional_main"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/additional_main"
                app:boxStrokeColor="@color/additional_main"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:hintTextColor="@color/additional_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/item_edittext_style"
                    android:fontFamily="@font/oranienbaum"
                    android:gravity="center_vertical"
                    android:hint="@string/your_password"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:textColor="@color/additional_main"
                    android:textColorHighlight="@color/background_main"
                    android:textColorHint="@color/additional_main"
                    android:textColorLink="@color/background_main"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password_conf_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbarSize="25dp"
                android:textColorHint="@color/additional_main"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/additional_main"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:hintTextColor="@color/additional_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_conf_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/item_edittext_style"
                    android:fontFamily="@font/oranienbaum"
                    android:gravity="center_vertical"
                    android:hint="@string/your_password_confirm"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:textColor="@color/additional_main"
                    android:textColorHighlight="@color/background_main"
                    android:textColorHint="@color/additional_main"
                    android:textColorLink="@color/background_main"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbarSize="25dp"
                android:textColorHint="@color/additional_main"
                app:boxBackgroundMode="none"
                app:boxStrokeColor="@color/additional_main"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:hintTextColor="@color/additional_main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/item_edittext_style"
                    android:fontFamily="@font/oranienbaum"
                    android:gravity="center_vertical"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:textColor="@color/additional_main"
                    android:textColorHighlight="@color/background_main"
                    android:textColorHint="@color/additional_main"
                    android:textColorLink="@color/background_main"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>